--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <META NAME="Author" CONTENT="">
   <META NAME="Keywords" CONTENT="">
   <META NAME="Description" CONTENT="">
+  <meta property="og:url"                content="https://quangmv2.github.io/trai-tym-tang-thao/" />
+  <meta property="og:type"               content="article" />
+  <meta property="og:title"              content="Trái Tym Tặng TT" />
+  <meta property="og:description"        content="Thảo đang tỏ tình tau phải không?" />
+  <meta property="og:image"              content="https://scontent.fhan15-1.fna.fbcdn.net/v/t39.30808-1/307881511_1460572087757906_6275622257575688411_n.jpg?stp=cp6_dst-jpg_p200x200&_nc_cat=105&ccb=1-7&_nc_sid=7206a8&_nc_ohc=XaprvDw2iV4AX8twsPP&_nc_ht=scontent.fhan15-1.fna&oh=00_AfBR0jRnZjTDmvJhmfq3qbyaDkOaH0lVcfMKDb5DVLrQZQ&oe=636FC916" />
   <link rel="stylesheet" href="style.css">
   <style>
   html, body {
