--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <META NAME="Author" CONTENT="">
   <META NAME="Keywords" CONTENT="">
   <META NAME="Description" CONTENT="">
+   <link rel = "icon" href = 
+"https://www.google.com/url?sa=i&url=https%3A%2F%2Fvi.wikipedia.org%2Fwiki%2FTr%25C3%25A1i_tim_(bi%25E1%25BB%2583u_t%25C6%25B0%25E1%25BB%25A3ng)&psig=AOvVaw1WPSPsGrZuA0z9ZeNpF1Eb&ust=1668054060905000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCNDX4OCfoPsCFQAAAAAdAAAAABAD" 
+        type = "image/x-icon">
   <meta property="og:url"                content="https://quangmv2.github.io/trai-tym-tang-thao/" />
   <meta property="og:type"               content="article" />
   <meta property="og:title"              content="Trái Tym Tặng TT" />
